--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
    <meta name="author" content="UCS">
    <meta name="description" content="Meet the DEATH_BOTTy">
 
-   <link rel="stylesheet" type="text/css" href="botcss/index.css">
+   <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
    <script src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
   <div class="something-special">
-    <a href="javascript:void(0)" onclick="BOTTy()" title="Tell your name to Death_BOTTy" class="bot-btn"><i class="fas fa-robot"></i></a>
+    <a href="javascript:void(0)" onclick="BOcT()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
   </div>
 
 
-  <script src="botscript/bot.js"></script>
+  <script src="boctscript/boct.js"></script>
 </body>
 </html>
