--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>DEATH_BOTTy</title>
+   <title>The BOcT</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta charset="utf-8">
 
    <meta name="author" content="UCS">
-   <meta name="description" content="Meet the DEATH_BOTTy">
+   <meta name="description" content="Meet The BOcT">
 
    <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
    <script src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
