--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
    <script src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
 </head>
 <body>
+ <div class="heading">
+   <h1>The BOcT</h1>
+ </div>
+
 
   <div class="something-special">
     <a href="javascript:void(0)" onclick="BOcT()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
