--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
  </div>
 
 
-  <div class="something-special">
+  <div class="bot-head">
     <a href="javascript:void(0)" onclick="BOcT()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
   </div>
 
-
+ <footer>
+    <div>
+      <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE" title="Under the MIT LICENSE"><i class="far fa-copyright"></i> 2020 U Chanakya S</a>
+    </div>
+    <div>
+      <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
+    </div>
+ </footer>
   <script src="boctscript/boct.js"></script>
 </body>
 </html>
