--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
    <script src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
 </head>
 <body>
- <div class="heading">
-   <h1>The BOcT</h1>
+ <div class="heading" id="header">
+   <h1 id="title">The BOcT</h1>
  </div>
 
 
-  <div class="bot-head">
-    <a href="javascript:void(0)" onclick="BOcT()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
+  <div class="bot-head" id="content-div-bot">
+    <a id="BOcT" href="javascript:void(0)" onclick="BO()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
   </div>
 
  <footer>
