--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
 
   <div class="bot-head" id="content-div-bot">
-    <a id="BOcT" href="javascript:void(0)" onclick="BO()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
+    <a id="BOcT" href="javascript:void(0)" onclick="BOcT()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
   </div>
+
+  <div class="arrow_box">
+  </div>
+
 
  <footer>
     <div>
