--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 
   <div class="bot-head" id="content-div-bot">
-    <a id="BOcT" href="javascript:void(0)" onclick="BOcT()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
+    <a id="BOcT" href="javascript:void(0)" onclick="BOc()" title="Tell your name to BOcT" class="bot-btn"><i class="fas fa-robot"></i></a>
   </div>
 
-  <div class="arrow_box">
+  <div class="arrow_box" id="chatter">
   </div>
 
 
