--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   </div>
 
   <div class="arrow_box" id="chatter">
+   <div class="inner-arrow_box">
+   </div>
+   <input class="texts" type="text" placeholder="begin"></input>
+   <button class="subm" type="submit" placeholder=""><i class="fas fa-play"></i></button>
   </div>
 
 
