--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <title>The BOcT</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta charset="utf-8">
+   <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
 
    <meta name="author" content="UCS">
    <meta name="description" content="Meet The BOcT">
@@ -24,8 +25,9 @@
   <div class="arrow_box" id="chatter">
    <div class="inner-arrow_box">
    </div>
-   <input class="texts" type="text" placeholder="begin"></input>
-   <button class="subm" type="submit" placeholder=""><i class="fas fa-play"></i></button>
+    <input class="texts" type="text" placeholder="begin"></input>
+    <button class="subm" type="submit" placeholder=""><i class="fas fa-play"></i></button>
+
   </div>
 
 
