--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <div class="arrow_box" id="chatter">
    <div class="inner-arrow_box">
    </div>
-    <input class="texts" type="text" placeholder="begin"></input>
-    <button class="subm" type="submit" placeholder=""><i class="fas fa-play"></i></button>
+    <input class="texts" type="text" placeholder="begin">
+    <button class="subm" type="submit"><i class="fas fa-play"></i></button>
 
   </div>
 
