--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
    <meta name="description" content="Meet The BOcT">
 
    <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
-   <script src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
+   <script defer src="boctscript/boct.js"></script>
+   <script async src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
 </head>
 <body>
  <div class="heading" id="header">
@@ -38,6 +39,5 @@
       <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
     </div>
  </footer>
-  <script src="boctscript/boct.js"></script>
 </body>
 </html>
