--- a/index.html
+++ b/index.html
@@ -26,9 +26,31 @@
   <div class="arrow_box" id="chatter">
    <div class="inner-arrow_box">
    </div>
+   <div class="wrap">
+      <div class="search">
+         <input type="text" class="searchTerm" placeholder="What are you looking for?">
+         <button type="submit" class="searchButton">
+           <i class="fa fa-search"></i>
+        </button>
+      </div>
+   </div>
+ </div>
+
+<!--
     <input class="texts" type="text" placeholder="begin">
-    <button class="subm" type="submit"><i class="fas fa-play"></i></button>
+    <button class="subm" type="submit"><i class="fas fa-play"></i></button>  -->
+
+
+
+  <div class="wrap">
+     <div class="search">
+        <input type="text" class="searchTerm" placeholder="What are you looking for?">
+        <button type="submit" class="searchButton">
+          <i class="fa fa-search"></i>
+       </button>
+     </div>
   </div>
+
 
 
  <footer>
