--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
    </div>
    <div class="wrap">
       <div class="search">
-         <input type="text" class="searchTerm" placeholder="What are you looking for?">
+         <input type="text" class="searchTerm" placeholder="Wanna talk with BOcT? Then type here..!">
          <button type="submit" class="searchButton">
-           <i class="fa fa-search"></i>
+           <i class="fas fa-play"></i>
         </button>
       </div>
    </div>
@@ -39,17 +39,6 @@
 <!--
     <input class="texts" type="text" placeholder="begin">
     <button class="subm" type="submit"><i class="fas fa-play"></i></button>  -->
-
-
-
-  <div class="wrap">
-     <div class="search">
-        <input type="text" class="searchTerm" placeholder="What are you looking for?">
-        <button type="submit" class="searchButton">
-          <i class="fa fa-search"></i>
-       </button>
-     </div>
-  </div>
 
 
 
