--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
 
    <meta name="author" content="UCS">
-   <meta name="description" content="Meet The BOcT">
+   <meta name="description" content="Meet the BOcT">
 
    <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
    <script async src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
@@ -35,11 +35,6 @@
       </div>
    </div>
  </div>
-
-<!--
-    <input class="texts" type="text" placeholder="begin">
-    <button class="subm" type="submit"><i class="fas fa-play"></i></button>  -->
-
 
 
  <footer>
