--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta charset="utf-8">
    <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
+   <link rel="icon" href="boctstyle/robot.ico">
 
    <meta name="author" content="UCS">
    <meta name="description" content="Meet the BOcT">
@@ -20,7 +21,7 @@
 
 
   <div class="bot-head" id="content-div-bot">
-    <a id="BOcT" href="javascript:void(0)" onclick="BOc()" title="Tell your name to BOcT" class="bot-btn">
+    <a id="BOcT" href="javascript:void(0)" onclick="BOc()" title="The BOcT" class="bot-btn">
       <svg viewBox="0 0 640 512">
         <path d="M32,224H64V416H32A31.96166,31.96166,0,0,1,0,384V256A31.96166,31.96166,0,0,1,32,224Zm512-48V448a64.06328,64.06328,0,0,1-64,64H160a64.06328,64.06328,0,0,1-64-64V176a79.974,79.974,0,0,1,80-80H288V32a32,32,0,0,1,64,0V96H464A79.974,79.974,0,0,1,544,176ZM264,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,264,256Zm-8,128H192v32h64Zm96,0H288v32h64ZM456,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,456,256Zm-8,128H384v32h64ZM640,256V384a31.96166,31.96166,0,0,1-32,32H576V224h32A31.96166,31.96166,0,0,1,640,256Z"/>
       Sorry, your browser does not support inline SVG.
@@ -29,7 +30,7 @@
   </div>
 
   <div class="arrow_box" id="chatter">
-   <div class="inner-arrow_box">
+   <div class="inner-arrow_box" id="chatspace">
    </div>
    <div class="wrap">
       <div class="search">
