--- a/index.html
+++ b/index.html
@@ -31,7 +31,28 @@
 
   <div class="arrow_box" id="chatter">
    <div class="inner-arrow_box" id="chatspace">
-     <p></p>
+     <!-- CHAT HTML goes here -->
+     <div class="boct_talk">
+       <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
+     </div>
+     <div class="human_talk">
+       <p>I'm a human. I too can talk sense and non-sense. Unlike you, I'm developed and I also independently Evolve to a better being.</p>
+     </div>
+     <div class="boct_talk">
+       <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
+     </div>
+     <div class="human_talk">
+       <p>I'm a human. I too can talk sense and non-sense. Unlike you, I'm developed and I also independently Evolve to a better being.</p>
+     </div>
+     <div class="boct_talk">
+       <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
+     </div>
+     <div class="human_talk">
+       <p>I'm a human. I too can talk sense and non-sense. Unlike you, I'm developed and I also independently Evolve to a better being.</p>
+     </div>
+     <div class="boct_talk">
+       <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
+     </div>
    </div>
    <div class="wrap">
       <div class="search">
