--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   </div>
 
   <div class="arrow_box" id="chatter">
-   <div class="inner-arrow_box" id="chatspace">
-     <!-- CHAT HTML goes here -->
+   <div class="talk_box" id="chatspace">
+     <!-- CHAT HTML goes here ------------------------------------>
      <div class="boct_talk">
        <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
      </div>
@@ -52,14 +52,16 @@
      </div>
      <div class="boct_talk">
        <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
+     </div>
+     <div class="human_talk">
+       <p>Stop it...............I don't care.</p>
      </div>
    </div>
-   <div class="wrap">
-      <div class="search">
-         <input type="text" class="searchTerm" placeholder="Wanna talk with BOcT? Then type here..!">
-         <button type="submit" class="searchButton">
-           <i class="fas fa-play"></i>
-        </button>
+   <!-- Type bar ----------------------------------------------->
+   <div class="type_box">
+      <div class="type_box-inner">
+         <input class="typespace" type="text" placeholder="Wanna talk with BOcT? Then type here..!">
+         <button class="typespace-enter" type="submit"><i class="fas fa-play"></i></button>
       </div>
    </div>
  </div>
