--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      <div class="human_talk">
        <p>I'm a human. I too can talk sense and non-sense. Unlike you, I'm developed and I also independently Evolve to a better being.</p>
      </div>
-     <div class="boct_talk">
+     <div class="boct_talk recent_talk">
        <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
      </div>
      <div class="human_talk">
