--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <!-- Type bar ----------------------------------------------->
    <div class="type_box">
      <form class="type_box-inner" action="javascript:void(0);">
-        <input class="typespace" id="typespace-id" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off">
+        <input class="typespace" id="typespace-id" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="180" spellcheck="true">
         <button class="typespace-enter" id="typespace-enter-id" type="submit"><i class="fas fa-play"></i></button>
      </form>
    </div>
