--- a/index.html
+++ b/index.html
@@ -58,5 +58,11 @@
       <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
     </div>
  </footer>
+
+ <div class="loader-wrapper" id="loader">
+   <div class="loader">Loading...</div>
+ </div>
+
+
 </body>
 </html>
