--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
    <link rel="icon" href="boctstyle/robot.ico">
-   <link rel="license" href="LICENSE">
+   <link rel="license" href="LICENSE.md">
 
    <meta name="author" content="UCS">
    <meta name="description" content="Meet the BOcT">
