--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </div>
  </footer>
 
+<!-- Loading screen ---------------------------------------------->
  <div class="loader-wrapper" id="loader">
    <div class="loader">Loading...</div>
  </div>
