--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
    <meta name="description" content="Meet the BOcT">
 
    <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
-   <script async src="https://kit.fontawesome.com/51da928531.js" crossorigin="anonymous"></script>
    <script defer src="boctscript/boct.js"></script>
 </head>
 <body>
@@ -57,7 +56,7 @@
 
  <footer>
     <div>
-      <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE" title="Under MIT LICENSE"><i class="far fa-copyright"></i> 2020 U Chanakya S</a>
+      <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 The-UCS-Variable</a>
     </div>
     <div>
       <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
