--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
    <meta name="description" content="Meet the BOcT">
 
    <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
-   <script defer src="boctscript/boct.js"></script>
+   <script type="module" src="boctscript/talk-script.js"></script>
+   <script type="module" src="boctscript/index.js"></script>
+
 </head>
 <body>
  <div class="heading" id="header">
