--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
    <!-- CHAT HTML goes here ------------------------------------->
    <div class="talk_box" id="chatspace">
      <div class="boct_talk">
-       <p>I'm the BOcT. I can talk sense and non-sense. But, I'm still in development. Please Wait for my Updates.</p>
-     </div>
-     <div class="human_talk">
-       <p>I'm a human. I too can talk sense and non-sense. Unlike you, I'm developed and I also independently Evolve to a better being.</p>
+       <p>I'm the BOcT. I'm still in development. Please Wait for my Updates.</p>
      </div>
    </div>
    <!-- Type bar ----------------------------------------------->
@@ -66,13 +63,18 @@
     </div>
  </footer>
 
-<!-- Loading screen ---------------------------------------------->
+ <!-- Loading screen ---------------------------------------------->
  <div class="loader-wrapper" id="loader">
    <div class="loader">
      <div class="load_bar"></div>
    </div>
  </div>
-
+ <!-- Pop 
+ <div class="pop">
+   <div class="pop-inner">
+    <p>hi</p>
+   </div>
+ </div> -->
 
 </body>
 </html>
