--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <!-- CHAT HTML goes here ------------------------------------->
    <div class="talk_box" id="chatspace">
      <div class="boct_talk">
-       <p>I'm the BOcT. I'm still in development. Please Wait for my Updates.</p>
+       <p>I'm the BOcT. I have Scripted Intelligence and it's still in development. Please Wait for my Updates.</p>
      </div>
    </div>
    <!-- Type bar ----------------------------------------------->
