--- a/index.html
+++ b/index.html
@@ -69,12 +69,7 @@
      <div class="load_bar"></div>
    </div>
  </div>
- <!-- Pop 
- <div class="pop">
-   <div class="pop-inner">
-    <p>hi</p>
-   </div>
- </div> -->
+ <!-- Add PopUp here -->
 
 </body>
 </html>
