--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
 
  <!-- Loading screen ---------------------------------------------->
  <div class="loader-wrapper" id="loader">
-   <div class="loader">
-     <div class="load_bar"></div>
-   </div>
+   <div class="loader"><div class="load_bar"></div></div>
  </div>
  <!-- Add PopUp here -->
 
