--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>The BOcT</title>
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta charset="utf-8">
-   <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
-   <link rel="icon" href="boctstyle/robot.ico">
-   <link rel="license" href="LICENSE.md">
-   <meta name="author" content="UCS">
-   <meta name="description" content="Meet the BOcT">
+  <title>The BOcT</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
+  <link rel="icon" href="boctstyle/robot.ico">
+  <link rel="license" href="LICENSE.md">
+  <meta name="author" content="UCS">
+  <meta name="description" content="Meet the BOcT">
 
-   <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
-   <script defer src="boctscript/index.js"></script>
-   <script defer src="boctscript/boct.js"></script>
-   <script defer src="boctscript/talk-script.js"></script>
+  <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
+  <script defer src="boctscript/index.js"></script>
+  <script defer src="boctscript/boct.js"></script>
+  <script defer src="boctscript/talk-script.js"></script>
 </head>
 <body>
- <div class="heading" id="header">
-   <h1 id="title">The BOcT</h1>
- </div>
-
+  <div class="heading" id="header"><h1 id="title">The BOcT</h1></div>
 
   <div class="bot-head" id="content-div-bot">
     <a class="bot-btn" id="BOcT" href="javascript:void(0);" title="The BOcT">
@@ -29,43 +26,41 @@
     </a>
   </div>
 
-
   <div class="arrow_box" id="chatter">
-   <!-- CHAT HTML goes here ------------------------------------->
-   <div class="talk_box" id="chatspace">
-     <div class="boct_talk">
-       <p>I'm the BOcT. I have Scripted Intelligence and it's still in development. Please Wait for my Updates.</p>
-     </div>
-   </div>
-   <!-- Type bar ----------------------------------------------->
-   <div class="type_box">
-     <form class="type_box-inner" action="javascript:void(0);">
+    <!-- CHAT HTML goes here ------------------------------------->
+    <div class="talk_box" id="chatspace">
+      <div class="boct_talk">
+        <p>I'm the BOcT. I have Scripted Intelligence and it's still in development. Please Wait for my Updates.</p>
+      </div>
+    </div>
+    <!-- Type bar ----------------------------------------------->
+    <div class="type_box">
+      <form class="type_box-inner" action="javascript:void(0);">
         <input class="typespace" id="typespace-id" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="180" spellcheck="true">
         <button class="typespace-enter" id="typespace-enter-id" type="submit">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"/>
           </svg>
         </button>
-     </form>
-   </div>
- </div>
- 
+      </form>
+    </div>
+  </div>
 
 
- <footer>
+  <footer>
     <div>
       <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 The-UCS-Variable</a>
     </div>
     <div>
       <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
     </div>
- </footer>
+  </footer>
 
- <!-- Loading screen ---------------------------------------------->
- <div class="loader-wrapper" id="loader">
-   <div class="loader"><div class="load_bar"></div></div>
- </div>
- <!-- Add PopUp here -->
+  <!-- Loading screen ---------------------------------------------->
+  <div class="loader-wrapper" id="loader">
+    <div class="loader"><div class="load_bar"></div></div>
+  </div>
+  <!-- Add PopUp here -->
 
 </body>
 </html>
