--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- CHAT HTML goes here ------------------------------------->
     <div class="talk_box" id="chatspace">
       <div class="boct_talk">
-        <p>I'm the BOcT. I have Scripted Intelligence and it's still in development. Please Wait for my Updates.</p>
+        <p>I'm the BOcT. I have Scripted Intelligence though, still in development. Please Wait for my Updates.</p>
       </div>
     </div>
     <!-- Type bar ----------------------------------------------->
