--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 
   <!-- Loading screen --------------------------------------->
   <div class="loader-wrapper" id="loader">
-    <div class="loader"><div class="load_bar"></div></div>
+    <div class="loader">
+      <div class="load_bar" id="barr"></div>
+      <div class="load_text" id="textt">Loading</div>
+    </div>
   </div>
   <!-- Add PopUp here -->
 
