--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="Meet the BOcT">
 
   <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/boct.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
