--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="license" href="LICENSE.md">
   <meta name="author" content="UCS">
   <meta name="description" content="Meet the BOcT">
+  <meta name="theme-color" content="#317EFB"/>
 
   <link rel="stylesheet" type="text/css" href="boctstyle/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
