--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <meta name="description" content="Meet the BOcT">
   <meta name="theme-color" content="#FF1439"/>
 
-  <link rel="stylesheet" type="text/css" href="boctstyle/nindex.css">
-  <link rel="stylesheet" type="text/css" href="boctstyle/nindex2.css">
+  <link rel="stylesheet" type="text/css" href="boctstyle/boct.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/boct.js"></script>
@@ -20,37 +19,41 @@
 </head>
 <body>
   <div class="alll">
-  <div class="pagehead">
-    <div class="heading" id="header"><h1 id="title">The BOcT</h1></div>
-    <div class="bot-head" id="content-div-bot">
-      <a class="bot-btn" id="BOcT" href="javascript:void(0);" title="The BOcT">
-        <svg viewBox="0 0 640 512">
-        <path d="M32,224H64V416H32A31.96166,31.96166,0,0,1,0,384V256A31.96166,31.96166,0,0,1,32,224Zm512-48V448a64.06328,64.06328,0,0,1-64,64H160a64.06328,64.06328,0,0,1-64-64V176a79.974,79.974,0,0,1,80-80H288V32a32,32,0,0,1,64,0V96H464A79.974,79.974,0,0,1,544,176ZM264,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,264,256Zm-8,128H192v32h64Zm96,0H288v32h64ZM456,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,456,256Zm-8,128H384v32h64ZM640,256V384a31.96166,31.96166,0,0,1-32,32H576V224h32A31.96166,31.96166,0,0,1,640,256Z"/>
-        </svg>
-      </a>
-    </div>
-  </div>
-
-  <div class="arrow_box" id="chatter">
-    <!-- CHAT HTML goes here -------------------------------->
-    <div class="talk_box" id="chatspace">
-      <div class="boct_talk">
-        <p>I'm the BOcT. I have Scripted Intelligence though, still in development. Please Wait for my Updates.</p>
+    <div class="pagehead">
+      <div class="heading" id="header"><h1 id="title">The BOcT</h1></div>
+      <div class="bot-head" id="content-div-bot">
+        <a class="bot-btn" id="BOcT" href="javascript:void(0);" title="The BOcT">
+          <svg viewBox="0 0 640 512">
+          <path d="M32,224H64V416H32A31.96166,31.96166,0,0,1,0,384V256A31.96166,31.96166,0,0,1,32,224Zm512-48V448a64.06328,64.06328,0,0,1-64,64H160a64.06328,64.06328,0,0,1-64-64V176a79.974,79.974,0,0,1,80-80H288V32a32,32,0,0,1,64,0V96H464A79.974,79.974,0,0,1,544,176ZM264,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,264,256Zm-8,128H192v32h64Zm96,0H288v32h64ZM456,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,456,256Zm-8,128H384v32h64ZM640,256V384a31.96166,31.96166,0,0,1-32,32H576V224h32A31.96166,31.96166,0,0,1,640,256Z"/>
+          </svg>
+        </a>
       </div>
     </div>
-    <!-- Type bar ------------------------------------------->
-    <div class="type_box">
-      <form class="type_box-inner" action="javascript:void(0);">
-        <input class="typespace" id="typespace-id" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="180" spellcheck="true">
-        <button class="typespace-enter" id="typespace-enter-id" type="submit">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+
+    <div class="arrow_box" id="chatter">
+      <!-- CHAT HTML goes here -------------------------------->
+      <div class="talk_box" id="chatspace">
+        <div class="boct_talk">
+          <p>I'm the BOcT. I have Scripted Intelligence though, still in development. Please Wait for my Updates.</p>
+        </div>
+      </div>
+      <!-- Type bar ------------------------------------------->
+      <div class="type_box">
+        <form class="type_box-inner" action="javascript:void(0);">
+          <input class="typespace" id="typespace-id" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="180" spellcheck="true">
+          <button class="typespace-enter" id="typespace-enter-id" type="submit">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"/>
-          </svg>
-        </button>
-      </form>
+            </svg>
+          </button>
+        </form>
+      </div>
     </div>
-  </div>
-  <div class="info"></div>
+    <div class="info">
+      <ul>
+        <li></li>
+      </ul>
+    </div>
   </div>
 
 
