--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="info">
       <fieldset>
-        <legend>BOcT</legend>
+        <legend>About BOcT</legend>
         <ul>
           <li class="settings"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <a href="javascript:void(0);" title="Settings">
@@ -65,9 +65,10 @@
             <a href="javascript:void(0);" title="Toggle Light Mode">
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </a></svg></li>
-        </ul><hr>
-        <p>BOcT is a Static Browser Chatbot made with JavaScript</p>
-        <p>It's currently in Alpha Stages</p>
+        </ul>
+        <p class="release">Build 1.2.1.18</p><hr>
+        <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
+        <p>It's currently in Early development stages</p>
         <p>You can search Google, Bing, YouTube and DuckDuckGo with it</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
         <p>Who knows what it can do!</p>
