--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </a></svg></li>
         </ul>
-        <p class="release">Build 1.2.1.18</p><hr>
+        <p class="release">Build 1.2.1.21</p><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
-        <p>You can search Google, Bing, YouTube and DuckDuckGo with it</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
-        <p>Who knows what it can do!</p>
+        <p>Who knows what it can do!</p><hr>
+        <p>- New Feature -</p>
+        <p>You can search Google, Bing, YouTube and DuckDuckGo with it</p>
       </fieldset>
     </div>
   </div>
