--- a/index.html
+++ b/index.html
@@ -61,17 +61,16 @@
             <a href="javascript:void(0);" title="Info">
             <path d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"/>
             </a></svg></li>
-          <li class="dark"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <a href="javascript:void(0);" title="Toggle Light Mode">
+          <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <a class="togglemode" data-themeNow="dark" href="javascript:void(0);" title="Toggle Light Mode">
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </a></svg></li>
         </ul>
-        <p class="release">Build 1.2.1.21</p><hr>
+        <p class="release">Version 1.2.1.3</p><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
-        <p>Who knows what it can do!</p><hr>
-        <p>- New Feature -</p>
+        <hr><p>- New Feature -</p>
         <p>You can search Google, Bing, YouTube and DuckDuckGo with it</p>
       </fieldset>
     </div>
