--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>The BOcT</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
   <link rel="icon" href="boctstyle/robot.ico">
@@ -22,11 +22,11 @@
     <div class="pagehead">
       <div class="heading" id="header"><h1 id="title">The BOcT</h1></div>
       <div class="bot-head" id="content-div-bot">
-        <a class="bot-btn" id="BOcT" href="javascript:void(0);" title="The BOcT">
+        <button class="bot-btn" id="BOcT" href="javascript:void(0);" title="The BOcT">
           <svg viewBox="0 0 640 512">
           <path d="M32,224H64V416H32A31.96166,31.96166,0,0,1,0,384V256A31.96166,31.96166,0,0,1,32,224Zm512-48V448a64.06328,64.06328,0,0,1-64,64H160a64.06328,64.06328,0,0,1-64-64V176a79.974,79.974,0,0,1,80-80H288V32a32,32,0,0,1,64,0V96H464A79.974,79.974,0,0,1,544,176ZM264,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,264,256Zm-8,128H192v32h64Zm96,0H288v32h64ZM456,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,456,256Zm-8,128H384v32h64ZM640,256V384a31.96166,31.96166,0,0,1-32,32H576V224h32A31.96166,31.96166,0,0,1,640,256Z"/>
           </svg>
-        </a>
+        </button>
       </div>
     </div>
 
@@ -40,7 +40,7 @@
       <!-- Type bar ------------------------------------------->
       <div class="type_box">
         <form class="type_box-inner" action="javascript:void(0);">
-          <input class="typespace" id="typespace-id" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="180" spellcheck="true">
+          <input class="typespace" id="typespace-id" type="text" placeholder="Wanna talk with BOcT? Then type here..!" autocomplete="off" maxlength="120" spellcheck="true">
           <button class="typespace-enter" id="typespace-enter-id" type="submit">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"/>
@@ -49,24 +49,22 @@
         </form>
       </div>
     </div>
+
     <div class="info">
       <fieldset>
         <legend>About BOcT</legend>
-        <ul>
-          <li class="settings"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <a href="javascript:void(0);" title="Settings">
+        <div class="infobtns">
+          <button class="settings"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"/>
-            </a></svg></li>
-          <li class="infooo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <a href="javascript:void(0);" title="Info">
+            </svg></button>
+          <button class="infooo"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"/>
-            </a></svg></li>
-          <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <a class="togglemode" data-themeNow="dark" href="javascript:void(0);" title="Toggle Light Mode">
+            </svg></button>
+          <button class="togglemode" data-themeNow="dark" title="Toggle Light Mode"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
-            </a></svg></li>
-        </ul>
-        <p class="release">Version 1.2.1.3</p><hr>
+            </svg></button>
+        </div>
+        <p class="release">Version 1.2.1.36</p><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
@@ -75,16 +73,6 @@
       </fieldset>
     </div>
   </div>
-
-
-  <footer>
-    <div>
-      <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 The-UCS-Variable</a>
-    </div>
-    <div>
-      <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
-    </div>
-  </footer>
 
   <!-- Loading screen --------------------------------------->
   <div class="loader-wrapper" id="loader">
