--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="alll">
     <div class="pagehead">
       <div class="heading" id="header"><h1 id="title">The BOcT</h1></div>
-      <div class="bot-head" id="content-div-bot">
+      <div class="bot-head">
         <button class="bot-btn" id="BOcT" href="javascript:void(0);" title="The BOcT">
           <svg viewBox="0 0 640 512">
           <path d="M32,224H64V416H32A31.96166,31.96166,0,0,1,0,384V256A31.96166,31.96166,0,0,1,32,224Zm512-48V448a64.06328,64.06328,0,0,1-64,64H160a64.06328,64.06328,0,0,1-64-64V176a79.974,79.974,0,0,1,80-80H288V32a32,32,0,0,1,64,0V96H464A79.974,79.974,0,0,1,544,176ZM264,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,264,256Zm-8,128H192v32h64Zm96,0H288v32h64ZM456,256a40,40,0,1,0-40,40A39.997,39.997,0,0,0,456,256Zm-8,128H384v32h64ZM640,256V384a31.96166,31.96166,0,0,1-32,32H576V224h32A31.96166,31.96166,0,0,1,640,256Z"/>
@@ -65,12 +65,13 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.41</p><hr>
+        <p class="release">Version 1.2.1.45</p><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
-        <hr><p>- New Feature -</p>
+        <hr><p>- New Features -</p>
         <p>You can search Google, Bing, YouTube and DuckDuckGo with it</p>
+        <p>Choose between Dark/Light Theme</p>
       </fieldset>
     </div>
   </div>
