--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Meet the BOcT">
   <meta name="theme-color" content="#E64C63"/>
 
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="manifest" href="/The-BOcT/manifest.webmanifest">
 
   <link rel="stylesheet" type="text/css" href="boctstyle/boct.css">
   <link rel="stylesheet" type="text/css" href="boctstyle/boctmediaq.css">
