--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
-  <link rel="icon" href="boctstyle/icons/robot.ico">
-  <link rel="license" href="LICENSE.md">
   <meta name="author" content="UCS">
   <meta name="description" content="Meet the BOcT">
-  <meta name="theme-color" content="#E64C63"/>
-
-  <link rel="manifest" href="/The-BOcT/manifest.webmanifest">
+  <link rel="icon" href="boctstyle/icons/robot.ico">
+  <link rel="license" href="LICENSE.md">
 
   <link rel="stylesheet" type="text/css" href="boctstyle/boct.css">
   <link rel="stylesheet" type="text/css" href="boctstyle/boctmediaq.css">
-
   <link rel="preconnect" href="//fonts.gstatic.com" crossorigin="">
   <link rel="preconnect" href="//fonts.googleapis.com" crossorigin="">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
+
+  <!--PWA-->
+  <meta name="theme-color" content="#E64C63"/>
+  <link rel="manifest" href="/The-BOcT/manifest.webmanifest">
+  <link rel="apple-touch-icon" href="/The-BOcT/boctstyle/icons/robot128.png">
+
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/boct.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
@@ -70,7 +72,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.57</p><hr>
+        <p class="release">Version 1.2.1.6</p><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
