--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script defer src="boctscript/talk-script.js"></script>
 </head>
 <body>
-  <div class="alll">
+  <div class="alll" id="allo">
     <div class="pagehead">
       <div class="heading" id="header"><h1 id="title">The BOcT</h1></div>
       <div class="bot-head">
@@ -72,7 +72,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.62</p>
+        <p class="release">Version 1.2.1.63</p>
         <button class="add-button">Add to home screen</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
@@ -91,7 +91,7 @@
       <div class="load_text" id="textt">Loading</div>
     </div>
   </div>
-  <!-- Add PopUp here -->
+  <!-- PopUp here -->
   <div id="info_popup">
     <div class="info_contain">
       <div class="info_content">
@@ -105,6 +105,7 @@
       <button class="info_close">close</button>
     </div>
   </div>
+  <!--Off Canvas menu for Settings-->
 
 </body>
 </html>
