--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.63</p>
+        <p class="release">Version 1.2.1.65</p>
         <button class="add-button">Add to home screen</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
@@ -106,6 +106,12 @@
     </div>
   </div>
   <!--Off Canvas menu for Settings-->
+  <div class="setting_canvas">
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn">&times;</a>
+      <a>The BOcT</a>
+    </div>
+  </div>
 
 </body>
 </html>
