--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="icon" href="boctstyle/icons/robot.ico">
   <link rel="license" href="LICENSE.md">
 
-  <link rel="stylesheet" type="text/css" href="boctstyle/boct.css">
-  <link rel="stylesheet" type="text/css" href="boctstyle/boctmediaq.css">
+  <link rel="stylesheet" href="boctstyle/boct.css">
+  <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
   <link rel="preconnect" href="//fonts.gstatic.com" crossorigin="">
   <link rel="preconnect" href="//fonts.googleapis.com" crossorigin="">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
@@ -39,11 +39,9 @@
     </div>
 
     <div class="arrow_box" id="chatter">
-      <!-- CHAT HTML goes here -------------------------------->
       <div class="talk_box" id="chatspace">
-        <div class="boct_talk">
-          <p>I'm the BOcT. I have Scripted Intelligence though, still in development. Please Wait for my Updates.</p>
-        </div>
+        <!-- CHAT HTML goes here -------------------------------->
+
       </div>
       <!-- Type bar ------------------------------------------->
       <div class="type_box">
@@ -72,7 +70,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.65</p>
+        <p class="release">Version 1.2.1.66</p>
         <button class="add-button">Add to home screen</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
@@ -91,7 +89,7 @@
       <div class="load_text" id="textt">Loading</div>
     </div>
   </div>
-  <!-- PopUp here -->
+  <!-- iPopUp here -->
   <div id="info_popup">
     <div class="info_contain">
       <div class="info_content">
