--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <link rel="stylesheet" href="boctstyle/boct.css">
   <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
-  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin="">
-  <link rel="preconnect" href="//fonts.googleapis.com" crossorigin="">
+  <link rel="preconnect" href="fonts.gstatic.com" crossorigin="">
+  <link rel="preconnect" href="fonts.googleapis.com" crossorigin="">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
 
   <!--PWA-->
@@ -70,8 +70,8 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.66</p>
-        <button class="add-button">Add to home screen</button><hr>
+        <p class="release">Version 1.2.1.67</p>
+        <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
