--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!--PWA-->
   <meta name="theme-color" content="#E64C63"/>
-  <link rel="manifest" href="/The-BOcT/manifest.webmanifest">
+  <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/The-BOcT/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/The-BOcT/boctstyle/icons/robot128.png">
 
   <script defer src="boctscript/index.js"></script>
@@ -70,7 +70,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.68</p>
+        <p class="release">Version 1.2.1.69</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
