--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.69</p>
+        <p class="release">Version 1.2.1.72</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
@@ -94,9 +94,7 @@
     <div class="info_contain">
       <div class="info_content">
         <div>
-          <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 The-UCS-Variable</a>
-        </div>
-        <div>
+          <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 The-UCS-Variable</a><br>
           <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
         </div>
       </div>
@@ -104,12 +102,7 @@
     </div>
   </div>
   <!--Off Canvas menu for Settings-->
-  <div class="setting_canvas">
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn">&times;</a>
-      <a>The BOcT</a>
-    </div>
-  </div>
+
 
 </body>
 </html>
