--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
 <head>
+  <!--Meta-->
   <title>The BOcT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <meta name="google-site-verification" content="qho6LUTU0hTe7r6Slj67fZhj2aTZ7MvQ4N-PQ2X_u0U" />
   <meta name="author" content="UCS">
   <meta name="description" content="Meet the BOcT">
+
   <link rel="icon" href="boctstyle/icons/robot.ico">
   <link rel="license" href="LICENSE.md">
 
+  <!--CSS-->
   <link rel="stylesheet" href="boctstyle/boct.css">
   <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
+
+  <!--Fonts-->
+  <link rel="preconnect" href="fonts.googleapis.com" crossorigin="anonymous">
   <link rel="preconnect" href="fonts.gstatic.com" crossorigin="">
-  <link rel="preconnect" href="fonts.googleapis.com" crossorigin="">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap">
 
   <!--PWA-->
   <meta name="theme-color" content="#E64C63"/>
   <link rel="manifest" type="application/manifest+json; charset=utf-8" href="/The-BOcT/manifest.webmanifest">
   <link rel="apple-touch-icon" href="/The-BOcT/boctstyle/icons/robot128.png">
 
+  <!--Scripts-->
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/boct.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
@@ -70,7 +77,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.72</p>
+        <p class="release">Version 1.2.1.73</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
