--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
     <div class="info_contain">
       <div class="info_content">
         <div>
-          <a href="https://github.com/The-UCS-Variable/The-BOcT/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 The-UCS-Variable</a><br>
-          <a href="https://github.com/The-UCS-Variable/The-BOcT">View Source</a>
+          <a href="https://github.com/The-BOcT/The-BOcT.github.io/blob/master/LICENSE.md" title="Under MIT LICENSE">© 2020 The-UCS-Variable</a><br>
+          <a href="https://github.com/The-BOcT/The-BOcT.github.io/">View Source</a>
         </div>
       </div>
+      <button id="experimental">Try Experimental Version</button>
       <button class="info_close">close</button>
     </div>
   </div>
