--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
   <script defer src="boctscript/index.js"></script>
   <script defer src="boctscript/boct.js"></script>
   <script defer src="boctscript/talk-script.js"></script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172364930-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-172364930-1');
+  </script>
+
 </head>
 <body>
   <div class="alll" id="allo">
@@ -78,7 +89,7 @@
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 1.2.1.76</p>
+        <p class="release">Version 1.2.1.77</p>
         <button class="add-button">Install</button><hr>
         <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
         <p>It's currently in Early development stages</p>
