--- a/index.html
+++ b/index.html
@@ -10,19 +10,15 @@
   <meta name="description" content="Meet the BOcT">
 
   <link rel="icon" href="boctstyle/icons/robot.ico">
-  <link rel="license" href="LICENSE.md">
+  <link rel="license" href="/LICENSE.md">
 
-  <link rel="preconnect" href="fonts.googleapis.com" crossorigin="anonymous">
-  <link rel="preconnect" href="fonts.gstatic.com" crossorigin="">
-  <link rel="preconnect" href="https://www.google-analytics.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="anonymous">
+  <link rel="preconnect" href="https://www.google-analytics.com/" crossorigin="use-credentials">
 
   <!--CSS-->
   <link rel="stylesheet" href="boctstyle/boct.css">
   <link rel="stylesheet" href="boctstyle/boctmediaq.css" media="screen and (max-width: 960px)">
-
-  <!--Fonts-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Megrim&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap">
 
   <!--PWA-->
   <meta name="application-name" content="The BOcT">
@@ -80,19 +76,19 @@
       <fieldset>
         <legend>About BOcT</legend>
         <div class="aboutbtns">
-          <button id="settingg"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <button id="settingg" title="Settings"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"/>
             </svg></button>
-          <button id="i-btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+          <button id="i-btn" title="Info"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"/>
             </svg></button>
           <button class="togglemode" data-themenow="dark" title="Toggle Dark/Light Mode"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/>
             </svg></button>
         </div>
-        <p class="release">Version 2.2</p>
+        <p class="release">Version 2.2.r1</p>
         <button class="add-button">Install</button><hr>
-        <p>BOcT is a Static Browser Chatbot, made with JavaScript</p>
+        <p>BOcT is a Static Browser Chatbot</p>
         <p>It's currently in Early development stages</p>
         <p>Future Updates to BOcT can make it perform basic Maths, Unit Conversions, Maybe suggest you some Movies...</p>
         <hr><p>- New Features -</p>
